--- a/src/app/opportunity/opportunity.style.css
+++ b/src/app/opportunity/opportunity.style.css
@@ -1,7 +1,9 @@
-#procurementDesc {
-  text-align: justify;
+.usa-grid{
+  -moz-osx-font-smoothing: grayscale;
+  -webkit-font-smoothing: antialiased;
 }
 
-.contact {
-  float: left;
+h1{
+  line-height: 1.1;
+  margin-top: 50px !important;
 }
