--- a/src/app/organization/organization.page.html
+++ b/src/app/organization/organization.page.html
@@ -1,7 +1,7 @@
 <div class="usa-grid">
   <div class="usa-width-one-whole" *ngIf="organization">
 
-    <h1>{{organization.agencyName}}</h1>
+    <h1>{{organization.agencyName || organization.name || organization.orgKey}}</h1>
 
     <section>
       Code {{organization.aacCode || organization.fpdsOrgId || organization.fpdsCode || organization.oldFpdsCode}}
