fixed a string issue

--- a/src/app/opportunity/opportunity.page.html
+++ b/src/app/opportunity/opportunity.page.html
@@ -84,7 +84,7 @@
           <h3>Primary Point of Contact</h3>
           <ul class="usa-unstyled-list">
             <li><strong>{{opportunity.data?.pointOfContact[0].fullName}}</strong></li>
-            <li><em>{{opportunity.data?.pointOfContact[0].title | capitalize}}</em></li>
+            <li *ngIf ="opportunity.data?.pointOfContact[0].title"><em>{{opportunity.data?.pointOfContact[0].title | capitalize}}</em></li>
             <li>
               <i class="fa fa-envelope-o" aria-hidden="true"></i> &nbsp;
               <a href="mailto:{{opportunity.data?.pointOfContact[0].email}}">
@@ -106,7 +106,7 @@
           <ul class="usa-unstyled-list">
 
             <li><strong>{{opportunity.data?.pointOfContact[1].fullName}}</strong></li>
-            <li><em>{{opportunity.data?.pointOfContact[1].title | capitalize}}</em></li>
+            <li *ngIf ="opportunity.data?.pointOfContact[1].title"><em>{{opportunity.data?.pointOfContact[1].title | capitalize}}</em></li>
             <li>
               <i class="fa fa-envelope-o" aria-hidden="true"></i> &nbsp;
               <a href="mailto:{{opportunity.data?.pointOfContact[1].email}}">
