alerts page and alerts header

--- a/src/app/app.template.html
+++ b/src/app/app.template.html
@@ -1,10 +1,9 @@
 <!-- includes HTML for app component-->
-<alertHeader></alertHeader>
 <samBanner #banner *ngIf="!isHeaderWithSearch"></samBanner>
-<div [style.padding-top]="isHeaderWithSearch ? '' : '24px'">
-  <samSearchHeader *ngIf="isHeaderWithSearch" (searchHeaderDropdownControl)="toggleOverlay($event)" (searchEvent)="onHeaderSearchEvent($event)" [keyword]="keyword" [filterValue]="index"></samSearchHeader>
-  <samHeader *ngIf="!isHeaderWithSearch" (headerDropdownControl)="toggleOverlay($event)"></samHeader>
-</div>
+<div [style.height]="!isHeaderWithSearch ? '22px' : '0'">&nbsp;</div>
+<alertHeader></alertHeader>
+<samSearchHeader *ngIf="isHeaderWithSearch" (searchHeaderDropdownControl)="toggleOverlay($event)" (searchEvent)="onHeaderSearchEvent($event)" [keyword]="keyword" [filterValue]="index"></samSearchHeader>
+<samHeader *ngIf="!isHeaderWithSearch" (headerDropdownControl)="toggleOverlay($event)"></samHeader>
 
 <main class="occupy-page relative">
   <router-outlet></router-outlet>
