--- a/src/app/application-content/alerts/alerts.template.html
+++ b/src/app/application-content/alerts/alerts.template.html
@@ -1,3 +1,5 @@
 <div class="usa-grid">
-  <h1><i class="fa fa-exclamation-triangle">Under construction</i></h1>
+  <!-- the first child cannot have a margin of the overlay break -->
+  <div style="height: 12px;"></div>
+  <samAlert *ngFor="let alert of alerts" [title]="alert.title" [description]="alert.description" [type]="alert.type"></samAlert>
 </div>
