--- a/src/app/Help/sections/overview/overview.template.html
+++ b/src/app/Help/sections/overview/overview.template.html
@@ -1,23 +1,25 @@
 <section>
   <h2 class="m_T-2x">Welcome to the SAM.gov Help Center!</h2>
+  <p class="p_L-8x">
+    Lorem ipsum dolor sit amet, vix dolor pericula conceptam at, qui delenit suavitate voluptatibus in,
+    graece diceret lobortis vim ei.
+  </p>
+
   <div class="usa-grid-full">
-    <p class="p_L-8x">
-      Lorem ipsum dolor sit amet, vix dolor pericula conceptam at, qui delenit suavitate voluptatibus in,
-      graece diceret lobortis vim ei.
-    </p>
 
     <h3 class="p_L-3x">Online Help Navigation</h3>
-    <p class="p_L-8x">
-      Omnes inermis ius at, ad assum constituto referrentur eam. Regione
-      deserunt no vis, in his sale aeque. Saepe virtute impedit no nec, elitr decore antiopam cu usu, sit
-      mandamus splendide comprehensam te.
-    </p>
+    <div class="usa-grid-full">
+      <p class="p_L-8x">
+        Omnes inermis ius at, ad assum constituto referrentur eam. Regione
+        deserunt no vis, in his sale aeque. Saepe virtute impedit no nec, elitr decore antiopam cu usu, sit
+        mandamus splendide comprehensam te.
+      </p>
+    </div>
 
-    <h3 class="p_L-3x">External Help</h3>
-    <h4 class="p_L-8x m_B-2x">Federal Service Desk</h4>
-    <div class="usa-width-one-whole m_B-3x">
+    <h3 class="p_L-3x">Federal Service Desk</h3>
+    <div class="usa-grid-full">
       <div class="usa-width-one-fourth p_L-8x">
-          <a><img src="../assets/img/blank_icon.png"></a>
+          <a><img src="../assets/img/fsd_logo.jpg"></a>
       </div>
       <div class="usa-width-three-fourths">
         <p>Ei ius novum aeque aeterno. Saepe dicam assueverit ius te. Et
@@ -26,17 +28,16 @@
         </p>
       </div>
     </div>
-    <h3 class="p_L-3x m_B-2x">Interact</h3>
-    <div class="usa-width-one-whole">
+    <h3 class="p_L-3x">Interact</h3>
+    <div class="usa-grid-full">
       <div class="usa-width-one-fourth p_L-8x">
-        <a><img src="../assets/img/blank_icon.png"></a>
+        <a><img src="../assets/img/interact.png"></a>
       </div>
       <div class="usa-width-three-fourths">
         <p>Ex homero consequuntur signiferumque ius. Velit saepe equidem has
           te, vim vulputate appellantur at. Ei ullum explicari eum, veritus
           mandamus at vel. Fugit consequat aliquando sed cu. Sed volumus copiosae
-          definitiones ei, has erant concludaturque ne. Ridens facilisi conclusionemque
-          mea ea. Vim quis eius tincidunt at, at eum quem vitae animal.
+          definitiones ei, has erant concludaturque ne.
         </p>
       </div>
     </div>
