--- a/src/app/opportunity/opportunity.page.html
+++ b/src/app/opportunity/opportunity.page.html
@@ -20,55 +20,64 @@
   <!--Main Content-->
   <div class="usa-width-three-fourths" *ngIf="opportunity">
     <section>
-      <h1>
-        {{ opportunity.data?.title }}
-      </h1>
-      <p class="content-block">
-        <span><strong>Solicitation Number: </strong>{{ opportunity.data?.solicitationNumber }}</span>
-        <span *ngIf="organization">
-          <strong>
-            <ng-container [ngSwitch]='organization.type'>
-              <ng-container *ngSwitchCase="'DEPARTMENT'">Department</ng-container>
-              <ng-container *ngSwitchCase="'AGENCY'">Agency</ng-container>
-              <ng-container *ngSwitchCase="'OFFICE'">Office</ng-container>
-            </ng-container>:
-          </strong>
+      <h1>{{ opportunity.data?.title }}</h1>
+
+      <ul class="usa-unstyled-list">
+        <li>
+          <strong>Solicitation Number: </strong>{{ opportunity.data?.solicitationNumber }}
+        </li>
+        <li *ngIf='organization'>
+          <strong [ngSwitch]='organization.type'>
+            <ng-container *ngSwitchCase="'DEPARTMENT'">Department</ng-container>
+            <ng-container *ngSwitchCase="'AGENCY'">Agency</ng-container>
+            <ng-container *ngSwitchCase="'OFFICE'">Office</ng-container>
+          </strong>:
           {{ organization.agencyName }}
-        </span>
-        <span><strong>Locations: </strong> {{ opportunityLocation }}</span>
-      </p>
+        </li>
+        <li>
+          <strong>Locations: </strong> {{ opportunityLocation }}
+        </li>
+      </ul>
     </section>
 
     <section id="gen-info">
       <h2>General Information</h2>
-
-      <p><strong>Opportunity Type: </strong>{{ opportunity.data?.type | opportunityTypeLabel }}</p>
-      <p *ngIf="opportunity.postedDate">
-        <strong>Posted Date: </strong>{{ opportunity.postedDate | dateFormat: 'MMM DD, YYYY h:mm a UTCZ' | timezoneLabel }}
-      </p>
-      <p *ngIf="originalOpportunity?.postedDate">
-        <strong>Original Posted Date: </strong>{{ originalOpportunity.postedDate | dateFormat: 'MMM DD, YYYY h:mm a UTCZ' | timezoneLabel }}
-      </p>
-      <p *ngIf="opportunity.data?.solicitation?.deadlines?.response">
-        <strong>Response Date: </strong>{{ opportunity.data.solicitation.deadlines.response | dateFormat: 'MMM DD, YYYY h:mm a UTCZ' | timezoneLabel }}
-      </p>
-      <p *ngIf="originalOpportunity?.data?.solicitation?.deadlines?.response">
-        <strong>Original Response Date: </strong>{{ originalOpportunity.data?.solicitation?.deadlines?.response | dateFormat: 'MMM DD, YYYY h:mm a UTCZ' | timezoneLabel }}
-      </p>
-
-      <p><strong>Archiving Policy: </strong>
-        <ng-container [ngSwitch]="opportunity.data?.archive?.type">
+      <ul class="usa-unstyled-list">
+        <li>
+          <strong>Opportunity Type: </strong>
+          {{ opportunity.data?.type | opportunityTypeLabel }}
+        </li>
+        <li *ngIf="opportunity.postedDate">
+          <strong>Posted Date: </strong>
+          {{ opportunity.postedDate | dateFormat: 'MMM DD, YYYY h:mm a UTCZ' | timezoneLabel }}
+        </li>
+        <li *ngIf="originalOpportunity?.postedDate">
+          <strong>Original Posted Date: </strong>
+          {{ originalOpportunity.postedDate | dateFormat: 'MMM DD, YYYY h:mm a UTCZ' | timezoneLabel }}
+        </li>
+        <li *ngIf="opportunity.data?.solicitation?.deadlines?.response">
+          <strong>Response Date: </strong>
+          {{ opportunity.data.solicitation.deadlines.response | dateFormat: 'MMM DD, YYYY h:mm a UTCZ' | timezoneLabel }}
+        </li>
+        <li *ngIf="originalOpportunity?.data?.solicitation?.deadlines?.response">
+          <strong>Original Response Date: </strong>
+          {{ originalOpportunity.data?.solicitation?.deadlines?.response | dateFormat: 'MMM DD, YYYY h:mm a UTCZ' | timezoneLabel }}
+        </li>
+        <li [ngSwitch]="opportunity.data?.archive?.type">
+          <strong>Archiving Policy: </strong>
           <ng-container *ngSwitchCase="'manual'">Manual Archive</ng-container>
           <ng-container *ngSwitchCase="'autocustom'">Automatic, on specified date</ng-container>
-        </ng-container>
-      </p>
-
-      <p *ngIf="opportunity.data?.archive?.date">
-        <strong>Archive Date: </strong>{{ opportunity.data?.archive?.date | dateFormat: 'MMM DD, YYYY h:mm a UTCZ' | timezoneLabel }}
-      </p>
-      <p *ngIf="originalOpportunity?.data?.archive?.date">
-        <strong>Original Archive Date: </strong>{{ originalOpportunity.data?.archive?.date | dateFormat: 'MMM DD, YYYY h:mm a UTCZ' | timezoneLabel }}
-      </p>
-     </section>
+        </li>
+        <li *ngIf="opportunity.data?.archive?.date">
+          <strong>Archive Date: </strong>
+          {{ opportunity.data?.archive?.date | dateFormat: 'MMM DD, YYYY h:mm a UTCZ' | timezoneLabel }}
+        </li>
+        <li *ngIf="originalOpportunity?.data?.archive?.date">
+          <strong>Original Archive Date: </strong>
+          {{ originalOpportunity.data?.archive?.date | dateFormat: 'MMM DD, YYYY h:mm a UTCZ' | timezoneLabel }}
+        </li>
+      </ul>
+    </section>
+    
   </div>
 </div>
