Fixing agency name bug

--- a/src/app/opportunity/opportunity.page.html
+++ b/src/app/opportunity/opportunity.page.html
@@ -32,7 +32,7 @@
             <ng-container *ngSwitchCase="'AGENCY'">Agency</ng-container>
             <ng-container *ngSwitchCase="'OFFICE'">Office</ng-container>:
           </strong>
-          {{ organization.agencyName }}
+          {{ organization.name }}
         </li>
         <li>
           <strong>Locations: </strong> {{ opportunityLocation }}
