SAM-258: implement opportunity organization / location

--- a/src/app/opportunity/opportunity.page.html
+++ b/src/app/opportunity/opportunity.page.html
@@ -33,9 +33,16 @@
               <ng-container *ngSwitchCase="'OFFICE'">Office</ng-container>
             </ng-container>:
           </strong>
-          {{ organization.agencyName }}
+          <ng-container *ngIf="organization.agencyName">{{ organization.agencyName }}</ng-container>
+          <ng-container *ngIf="organization.name && !organization.agencyName">{{ organization.name }}</ng-container>
         </span>
-        <span><strong>Locations: </strong> {{ opportunityLocation }}</span>
+        <span *ngIf="opportunityLocation"><strong>Locations: </strong> 
+          <ng-container *ngIf="opportunityLocation.street">{{ opportunityLocation.street }}</ng-container>
+          <ng-container *ngIf="opportunityLocation.city">{{ opportunityLocation.city }}</ng-container>
+          <ng-container *ngIf="opportunityLocation.state">{{ opportunityLocation.state }}</ng-container>
+          <ng-container *ngIf="opportunityLocation.zip">{{ opportunityLocation.zip }}</ng-container>
+          <ng-container *ngIf="opportunityLocation.country">{{ opportunityLocation.country }}</ng-container>
+        </span>
       </p>
     </section>
 
