--- a/src/app/application-content/ui-kit-demo/ui-kit-demo.template.html
+++ b/src/app/application-content/ui-kit-demo/ui-kit-demo.template.html
@@ -202,9 +202,11 @@
 
 <div class="usa-grid">
   <div class="usa-width-one-whole">
-    <h2>Alert Component &lt;samAlert&gt;</h2>
-
-    <agency-picker #eh1 [multimode]="true"></agency-picker>
-    <agency-picker #eh1 [multimode]="false"></agency-picker>
+    <h2>Agency picker &lt;agencyPicker&gt;</h2>
+    <label>Multiple Organizations:</label>
+    <agencyPicker [multimode]="true"></agencyPicker>
+    <label>Single Organization:</label>
+    <agencyPicker [multimode]="false"></agencyPicker>
   </div>
 </div>
+<br/>
