fixed locations to location

--- a/src/app/opportunity/opportunity.page.html
+++ b/src/app/opportunity/opportunity.page.html
@@ -36,7 +36,7 @@
           <ng-container *ngIf="organization.name && !organization.agencyName">{{ organization.name }}</ng-container>
         </li>
         <li *ngIf="opportunityLocation">
-          <strong>Locations: </strong>
+          <strong>Location: </strong>
           <ng-container *ngIf="opportunityLocation.street">{{ opportunityLocation.street }}</ng-container>
           <ng-container *ngIf="opportunityLocation.city">{{ opportunityLocation.city }}</ng-container>
           <ng-container *ngIf="opportunityLocation.state">{{ opportunityLocation.state }}</ng-container>
