[SAM-261] Contact Information section should always be shown

--- a/src/app/opportunity/opportunity.page.html
+++ b/src/app/opportunity/opportunity.page.html
@@ -86,7 +86,7 @@
     </section>
 
     <section id="contact-info">
-      <h2 *ngIf="hasPOC(0) || hasPOC(1)">Contact Information</h2>
+      <h2>Contact Information</h2>
       <div class="usa-grid-full" *ngIf = "opportunity.data?.pointOfContact">
         <div class="usa-width-one-half" *ngIf = "hasPOC(0)">
           <h3>Primary Point of Contact</h3>
