--- a/src/app/opportunity/opportunity.page.html
+++ b/src/app/opportunity/opportunity.page.html
@@ -90,7 +90,8 @@
       <ul class="usa-unstyled-list">
         <li *ngIf = "opportunity.parentOpportunity">
           <strong> Original Set Aside: </strong>
-          {{ opportunity.parentOpportunity?.data?.solicitation?.setAside }}
+          <ng-container *ngIf="opportunity.parentOpportunity?.data?.solicitation?.setAside"> {{ opportunity.parentOpportunity?.data?.solicitation?.setAside }} </ng-container> 
+          <ng-container *ngIf="!opportunity.parentOpportunity?.data?.solicitation?.setAside">N/A</ng-container> 
         </li>
         <li *ngIf = "opportunity.data?.solicitation?.setAside">
           <strong>Set Aside: </strong>
