--- a/src/app/app-components/agency-picker/agency-picker.template.html
+++ b/src/app/app-components/agency-picker/agency-picker.template.html
@@ -1,9 +1,9 @@
 <div class='organization-container'>
     <div class="usa-agency-picker usa-agency-picker-big">
-        <select style="height:auto;" multiple="" *ngIf="multimode" style="float:left;height:6em;" class="usa-agency-picker-select" id="agency-picker-field-big" type="text" name="agency-picker">
+        <select multiple="" *ngIf="multimode" class="usa-agency-picker-multiselect" type="text" name="agency-picker">
             <option *ngFor="let org of readonlyDisplayList">{{org.name}}</option>
         </select>
-        <input *ngIf="!multimode" [(ngModel)]="readonlyDisplay" [readOnly]="readOnlyToggle" class="usa-agency-picker-input" id="agency-picker-field-big" type="text" name="agency-picker">
+        <input *ngIf="!multimode" [(ngModel)]="readonlyDisplay" [readOnly]="readOnlyToggle" class="usa-agency-picker-input" type="text" name="agency-picker">
         <div class="usa-agency-picker-icon-area">
             <a (click)="toggleSelectorArea()" class="usa-agency-picker-submit-text">
                 <i *ngIf="!selectorToggle" class="agency-picker-icon fa fa-search-plus" aria-hidden="true"></i>
@@ -16,14 +16,13 @@
             <div *ngIf="fhSearchError">
                 {{ fhSearchMessage }}
             </div>
-            <div style="position:relative;">
-                <input  type="text" (blur)="onInputBlur($event)" aria-autocomplete="list" aria-haspopup="true" (keydown)="keydownHandler($event)" [(ngModel)]="searchTerm" (ngModelChange)="searchTermChange($event)" maxlength="75"/>
-                <ul *ngIf="autoCompleteToggle" class="autocomplete" style="z-index: 10;">
+            <div class="usa-agency-picker-selection-area">
+                <input type="text" (blur)="onInputBlur($event)" aria-autocomplete="list" aria-haspopup="true" (keydown)="keydownHandler($event)" [(ngModel)]="searchTerm" (ngModelChange)="searchTermChange($event)" maxlength="75"/>
+                <ul *ngIf="autoCompleteToggle" class="autocomplete">
                     <li *ngIf="showAutocompleteMsg" class="autocomplete-msg">{{autocompleteMsg}}</li>
                     <li *ngFor="let result of autoComplete; let i = index;" (mouseover)='autocompleteMouseover(i)' [ngClass]="i === autocompleteIndex?'autocomplete-selected':''" (mousedown)="autocompleteSelection(result)">{{result.name}}</li>
                 </ul>
             </div>
-            <!--button (click)="setOrganizationFromSearch()">Search</button-->
              <p>
                 <span class="agency-picker-browse-toggle" (click)="toggleBrowseArea()">Browse <i  *ngIf="!browseToggle" class="agency-picker-browse-toggle fa fa-caret-square-o-down" aria-hidden="true"></i><i  *ngIf="browseToggle" class="fa fa-caret-square-o-up" aria-hidden="true"></i></span>
             </p>
@@ -33,7 +32,6 @@
                         <samSelect [(model)]="orgLevel.selectedOrg" [name]="orgLevel.name" [options]="orgLevel.options" [label]="orgLevel.label" (modelChange)="loadChildOrganizations(idx)" ></samSelect>
                     </div>
                 </div>
-                <!--button (click)="setOrganizationFromBrowse()">change</button-->
             </div>
         </div>
         <div class="usa-width-one-sixth agency-picker-chevron-wrapper">
@@ -44,6 +42,7 @@
             <samMultiSelect #multiselect *ngIf="multimode" [options]="selectedOrganizations" (selectionUpdate)="emitSelectedOrganizations()"></samMultiSelect>
             <p *ngIf="!multimode">{{selectedSingleOrganizationName}}<span *ngIf="selectedOrganizations.length==0">No organization selected</span></p>
             <button *ngIf="multimode" (click)="removeSelectedOrgs()">Remove</button>
+            <button *ngIf="!multimode" (click)="clearSelectedOrgs()">Clear</button>
             <button (click)="close()">Done</button>
         </div>
     </div>
