[SAM-1617] Change related programs id to be visible

--- a/src/app/assistance-listing/assistance-listing.page.html
+++ b/src/app/assistance-listing/assistance-listing.page.html
@@ -61,7 +61,7 @@
             </ng-container>
           </ng-container>
 
-          <ng-container class="field" id="program-related-na" *ngIf="program.data?.relatedPrograms?.flag == 'na' || relatedProgram.length == 0">Not Applicable.</ng-container>
+          <span class="field" id="program-related-na" *ngIf="program.data?.relatedPrograms?.flag == 'na' || relatedProgram.length == 0">Not Applicable.</span>
         </span>
       </div>
     </section>
