Adjusted the width of the description section

--- a/src/app/organization/organization.page.html
+++ b/src/app/organization/organization.page.html
@@ -19,7 +19,7 @@
     </section>
 
     <!-- Description -->
-    <section class="usa-content" *ngIf="organization.summary">
+    <section *ngIf="organization.summary">
       <p id="orgDescription" [innerHTML]="organization.summary"></p>
     </section>
 
