removed pagination from Office types

--- a/src/app/organization/organization.page.html
+++ b/src/app/organization/organization.page.html
@@ -55,6 +55,6 @@
         <ng-container *ngSwitchCase="'AGENCY'"><em>No Offices Agencies Found.</em></ng-container>
       </p>
     </section>
-    <samPagination (pageChange)="pageChange($event)" [currentPage]="pageNum" [totalPages]="totalPages"></samPagination>
+    <samPagination *ngIf = "organization.type != 'OFFICE'" (pageChange)="pageChange($event)" [currentPage]="pageNum" [totalPages]="totalPages"></samPagination>
   </div>
 </div>
