--- a/src/app/opportunity/opportunity.page.html
+++ b/src/app/opportunity/opportunity.page.html
@@ -55,11 +55,11 @@
         </li>
         <li *ngIf="opportunity.postedDate">
           <strong>Posted Date: </strong>
-          {{ opportunity.postedDate | dateFormat: 'MMM DD, YYYY h:mm a' }}
+          {{ opportunity.postedDate | dateFormat: 'MMM DD, YYYY' }}
         </li>
         <li *ngIf="originalOpportunity?.postedDate">
           <strong>Original Posted Date: </strong>
-          {{ originalOpportunity.postedDate | dateFormat: 'MMM DD, YYYY h:mm a' }}
+          {{ originalOpportunity.postedDate | dateFormat: 'MMM DD, YYYY' }}
         </li>
         <li *ngIf="opportunity.data?.solicitation?.deadlines?.response">
           <strong>Response Date: </strong>
@@ -77,11 +77,11 @@
         </li>
         <li *ngIf="opportunity.data?.archive?.date">
           <strong>Archive Date: </strong>
-          {{ opportunity.data?.archive?.date | dateFormat: 'MMM DD, YYYY h:mm a' }}
+          {{ opportunity.data?.archive?.date | dateFormat: 'MMM DD, YYYY' }}
         </li>
         <li *ngIf="originalOpportunity?.data?.archive?.date">
           <strong>Original Archive Date: </strong>
-          {{ originalOpportunity.data?.archive?.date | dateFormat: 'MMM DD, YYYY h:mm a' }}
+          {{ originalOpportunity.data?.archive?.date | dateFormat: 'MMM DD, YYYY' }}
         </li>
       </ul>
     </section>
