[SAM-1740] Chance instances of “FAL Number” to “CFDA Number”

--- a/src/app/assistance-listing/assistance-listing.page.html
+++ b/src/app/assistance-listing/assistance-listing.page.html
@@ -51,7 +51,7 @@
         <p class="field" id="program-fh-information" *ngIf="federalHierarchy">
           <strong class="capitalize">{{federalHierarchy.type}}: </strong>{{federalHierarchy.name}}
         </p>
-        <span class="field" id="program-number"><strong>FAL Number: </strong>{{program.data?.programNumber}}</span>
+        <span class="field" id="program-number"><strong>CFDA Number: </strong>{{program.data?.programNumber}}</span>
 
         <span>
           <strong>Related Federal Assistance: </strong>
